--- a/src/pages/LogOutPage/LogOutPage.css
+++ b/src/pages/LogOutPage/LogOutPage.css
@@ -1,4 +1,27 @@
 .logout-container {
-  border: 1px solid black;
-  width: 300px;
+  width: 500px;
+  height: 300px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.logout-btn {
+  /* margin: 11px auto; */
+
+  font-size: 22px;
+  background-image: linear-gradient(
+    to right,
+
+    #333232 25%,
+    #070707 75%
+  );
+  color: burlywood;
+  padding: 10px 10px;
+}
+.logout-btn:hover {
+  padding: 10px 13px;
+
+  color: coral;
 }
