--- a/src/components/UI/CheckoutDetails/CheckoutDetails.css
+++ b/src/components/UI/CheckoutDetails/CheckoutDetails.css
@@ -1,4 +1,4 @@
-.checkout-order-details {
+/* .checkout-order-details {
   width: 500px;
   border: 1px solid black;
   background-image: linear-gradient(
@@ -68,4 +68,4 @@ h2 {
 }
 .checkout-page-button > button:hover {
   color: coral;
-}
+} */
