--- a/src/components/UI/OrderAddress/OrderAddress.css
+++ b/src/components/UI/OrderAddress/OrderAddress.css
@@ -1,6 +1,6 @@
-.order-address {
+/* .order-address {
   width: 20vw;
-  /* border: 1px solid black; */
+  
   display: flex;
   gap: 10px;
   background-image: linear-gradient(
@@ -14,4 +14,4 @@
   box-shadow: 10px 10px 10px 0px burlywood;
   padding: 20px 15px;
   align-items: first baseline;
-}
+} */
