--- a/src/pages/Cart/CartItemsCard.css
+++ b/src/pages/Cart/CartItemsCard.css
@@ -1,7 +1,7 @@
 .card-items-card {
-  width: 40vw;
-  height: 400px;
-  border: 1px solid black;
+  width: 40rem;
+  height: 40rem;
+  border: 0.1rem solid black;
   display: grid;
   grid-template-columns: 1fr 2fr;
   grid-template-rows: repeat(5 1fr);
@@ -11,13 +11,13 @@
     #333232 25%,
     #070707 75%
   );
-  box-shadow: 10px 10px 10px 0px burlywood;
-  padding: 20px;
-  margin: 10px;
+  box-shadow: 1rem 1rem 1rem 0rem burlywood;
+  padding: 2rem;
+  margin: 1rem;
 }
 .cart-items-card-book-cover {
   grid-area: 1/1/6/2;
-  margin: 10px 10px;
+  margin: 1rem 1rem;
 }
 .cart-items-card-book-cover-image {
   width: 100%;
@@ -26,31 +26,31 @@
 .cart-items-card-book-basic-details {
   color: burlywood;
   align-self: center;
-  margin: 10px 10px;
+  margin: 1rem 1rem;
 }
 .cart-items-card-book-basic-details > .cart-items-card-book-title {
-  font-size: 35px;
+  font-size: 3.5rem;
 }
 .cart-items-card-book-author {
-  font-size: 25px;
+  font-size: 2.5rem;
 }
 .cart-items-card-book-price {
-  font-size: 35px;
+  font-size: 3.5rem;
   color: burlywood;
   align-self: center;
-  margin: 10px 10px;
+  margin: 1rem 1rem;
 }
 .cart-items-card-book-price > s {
-  font-size: 25px;
+  font-size: 2.5rem;
   color: grey;
 }
 .cart-items-card-book-price > span {
-  font-size: 25px;
+  font-size: 2.5rem;
   font-weight: bold;
   color: green;
 }
 .cart-items-card-quantity-builder {
-  font-size: 25px;
+  font-size: 2.5rem;
   font-weight: bold;
   color: burlywood;
 }
@@ -62,9 +62,9 @@
     #333232 25%,
     #070707 75%
   );
-  margin: 10px 10px;
+  margin: 1rem 1rem;
   color: burlywood;
-  padding: 10px 10px;
+  padding: 1rem 1rem;
 }
 .cart-items-card-quantity-builder > button:hover {
   color: coral;
@@ -76,9 +76,9 @@
     #333232 25%,
     #070707 75%
   );
-  margin: 10px 10px;
+  margin: 1rem 1rem;
   color: burlywood;
-  font-size: 20px;
+  font-size: 2rem;
 }
 .cart-items-card-add-to-cart:hover {
   color: coral;
@@ -90,9 +90,9 @@
     #333232 25%,
     #070707 75%
   );
-  margin: 10px 10px;
+  margin: 1rem 1rem;
   color: burlywood;
-  font-size: 20px;
+  font-size: 2rem;
 }
 .cart-items-card-remove-from-cart:hover {
   color: coral;
