--- a/src/components/RootLayout/Navbar/Navbar.css
+++ b/src/components/RootLayout/Navbar/Navbar.css
@@ -11,27 +11,27 @@
     #070707 75%
   );
   color: white;
-  margin: 0vh;
-  padding: 3.5vh;
+  margin: 0rem;
+  padding: 3.5rem;
 }
 .navbar-brand {
   text-decoration: none;
   color: whitesmoke;
-  font-size: 5vh;
+  font-size: 5rem;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   font-weight: bolder;
-  padding: 2vh;
-  border: 1px solid white;
+  padding: 2rem;
+  border: 0.1rem solid white;
 }
 .navbar-links {
   display: flex;
   list-style-type: none;
 }
 .navbar-link {
-  margin: 0px 15px;
+  margin: 0rem 1.5rem;
   text-decoration: none;
   color: burlywood;
-  font-size: 3vh;
+  font-size: 3rem;
   font-family: Georgia, "Times New Roman", Times, serif;
   font-weight: 500;
 }
@@ -40,14 +40,14 @@
 }
 
 .navbar-search-section {
-  height: 6vh;
-  width: 18vw;
+  height: 6rem;
+  width: 28rem;
   font-size: large;
-  padding: 5px 15px;
+  padding: 0.5rem 1.5rem;
 }
 .navbar-search-section::placeholder {
   font-size: larger;
-  padding: 20px;
+  padding: 2rem;
 }
 /* .navbar-search-button {
   height: 6.5vh;
@@ -55,14 +55,118 @@
 } */
 .login-logout-button {
   color: burlywood;
-  font-size: 2vh;
+  font-size: 2rem;
   font-family: Georgia, "Times New Roman", Times, serif;
   font-weight: 500;
-  padding: 10px 10px;
+  padding: 1rem 1rem;
   background-image: linear-gradient(
     to right,
 
     #333232 25%,
     #070707 75%
   );
+}
+@media (max-width: 1236px) {
+  .navbar {
+    margin: 0rem;
+    padding: 3.5rem;
+  }
+  .navbar-brand {
+    font-size: 4rem;
+
+    padding: 2rem;
+    border: 0.1rem solid white;
+  }
+
+  .navbar-link {
+    margin: 0rem 1.5rem;
+    font-size: 2.5rem;
+  }
+
+  .navbar-search-section {
+    height: 6rem;
+    width: 20rem;
+
+    padding: 0.5rem 1.5rem;
+  }
+  .navbar-search-section::placeholder {
+    font-size: 1.8rem;
+    padding: 1.5rem;
+  }
+
+  .login-logout-button {
+    font-size: 1.7rem;
+    padding: 1rem 1rem;
+  }
+}
+@media (max-width: 998px) {
+  .navbar {
+    margin: 0rem;
+    padding: 3.5rem;
+  }
+  .navbar-brand {
+    font-size: 3rem;
+
+    padding: 2rem;
+    border: 0.1rem solid white;
+  }
+
+  .navbar-link {
+    margin: 0rem 1.3rem;
+    font-size: 2.3rem;
+  }
+
+  .navbar-search-section {
+    height: 5rem;
+    width: 15rem;
+
+    padding: 0.5rem 1.5rem;
+  }
+  .navbar-search-section::placeholder {
+    font-size: 1.5rem;
+    padding: 1.3rem;
+  }
+
+  .login-logout-button {
+    font-size: 1.5rem;
+    padding: 1rem 1rem;
+  }
+}
+@media (max-width: 768px) {
+  html {
+    font-size: 45.18%;
+  }
+}
+
+@media (max-width: 668px) {
+  html {
+    font-size: 39.29%;
+  }
+}
+@media (max-width: 600px) {
+  html {
+    font-size: 35.3%;
+  }
+}
+
+@media (max-width: 568px) {
+  html {
+    font-size: 33.41%;
+  }
+}
+@media (max-width: 468px) {
+  html {
+    font-size: 27.54%;
+  }
+}
+@media (max-width: 414px) {
+  html {
+    font-size: 24.35%;
+  }
+}
+
+@media (max-width: 400px) {
+  html {
+    font-size: 23.5%;
+  }
 }
