--- a/src/components/UI/Address/Address.css
+++ b/src/components/UI/Address/Address.css
@@ -5,20 +5,20 @@
   align-items: center;
 }
 .order-success {
-  border: 1px solid black;
+  border: 0.1rem solid black;
   margin-bottom: 2rem;
   text-align: center;
 }
 .price-breakup {
   display: flex;
   justify-content: space-between;
-  margin: 15px 15px;
+  margin: 1.5rem 1.5rem;
 }
 .address-card {
-  border: 1px solid black;
+  border: 0.1rem solid black;
   margin-bottom: 0.5rem;
-  padding: 10px 20px;
-  width: 50vh;
+  padding: 1rem 2rem;
+  width: 50rem;
   margin-left: 5rem;
   background-image: linear-gradient(
     to right,
@@ -27,6 +27,7 @@
     #070707 75%
   );
   color: burlywood;
+  font-size: 2rem;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 .address-card > p {
@@ -51,11 +52,11 @@
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 .edit-btn {
-  margin: 10px 10px;
-  padding: 5px 5px;
+  margin: 1rem 1rem;
+  padding: 0.5rem 0.5rem;
   cursor: pointer;
   border: none;
-  font-size: large;
+  font-size: 2rem;
 
   background-image: linear-gradient(
     to right,
@@ -67,9 +68,9 @@
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 .remove-btn {
-  margin: 10px 10px;
-  padding: 5px 5px;
-  font-size: large;
+  margin: 1rem 1rem;
+  padding: 0.5rem 0.5rem;
+  font-size: 2rem;
   cursor: pointer;
 
   background-color: white;
@@ -91,8 +92,8 @@
   );
   color: burlywood;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  padding: 20px 20px;
-  font-size: large;
+  padding: 1rem 1rem;
+  font-size: 2rem;
 }
 .checkout-btn {
   background-image: linear-gradient(
@@ -105,21 +106,21 @@
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   display: block;
   margin: auto;
-  font-size: larger;
-  padding: 6px 12px;
+  font-size: 2rem;
+  padding: 0.6rem 1.2rem;
 }
 .checkout-btn:hover {
   color: greenyellow;
-  padding: 6px 15px;
+  padding: 0.6rem 1.5rem;
 }
 .add-btn {
   margin-left: 5rem;
-  margin-top: 24px;
+  margin-top: 2.4rem;
   font-size: large;
   cursor: pointer;
   border: 1px solid black;
-  border-radius: 12px;
-  padding: 8px;
+  border-radius: 1.2rem;
+  padding: 0.8rem;
 }
 /* .place-order-btn{
       margin-left:1rem;
@@ -132,10 +133,10 @@
       } */
 .address-container {
   margin-top: 1rem;
-  width: 40vh;
-  box-shadow: rgba(90, 90, 90, 0.35) 0px 5px 15px;
+  width: 40rem;
+  box-shadow: rgba(90, 90, 90, 0.35) 0rem 0.5rem 1.5rem;
   border-radius: 0.5rem;
-  margin-left: 14rem;
+  margin-left: 2rem;
 }
 .address-container > div {
   margin: 1.5rem 0;
@@ -144,3 +145,12 @@
 .address-details {
   display: flex;
 }
+/* @media (screen: 893px) {
+  .address-container {
+    margin-top: 1rem;
+    width: 30rem;
+    box-shadow: rgba(90, 90, 90, 0.35) 0rem 0.5rem 1.5rem;
+    border-radius: 0.5rem;
+    margin-left: 2rem;
+  }
+} */
