--- a/src/components/UI/CartOrderDetails/CartOrderDetails.css
+++ b/src/components/UI/CartOrderDetails/CartOrderDetails.css
@@ -1,7 +1,7 @@
 .cart-order-details {
-  width: 400px;
-  height: 525px;
-  border: 1px solid black;
+  width: 40rem;
+  height: 52.5rem;
+  border: 0.1rem solid black;
   background-image: linear-gradient(
     to right,
 
@@ -10,18 +10,18 @@
   );
   color: burlywood;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  margin: 10px;
-  padding: 10px;
+  margin: 1rem;
+  padding: 1rem;
 }
 .cart-order-coupon-apply {
   display: flex;
   justify-content: space-between;
-  margin: 15px 15px;
-  font-size: 25px;
+  margin: 1.5rem 1.5rem;
+  font-size: 2.5rem;
 }
 .cart-order-coupon-apply > button {
-  font-size: 17px;
-  padding: 5px 5px;
+  font-size: 1.7rem;
+  padding: 0.5rem 0.5rem;
   background-image: linear-gradient(
     to right,
 
@@ -36,34 +36,34 @@
 }
 .cart-order-details-title {
   text-align: center;
-  padding: 15px 15px;
-  font-size: 30px;
+  padding: 1.5rem 1.5rem;
+  font-size: 3rem;
 }
 .cart-order-details-main {
-  font-size: 24px;
+  font-size: 2.4rem;
 }
 .cart-order-details-main-price {
   display: flex;
   justify-content: space-between;
-  margin: 15px 15px;
+  margin: 1.5rem 1.5rem;
 }
 .cart-order-details-main-total-price {
   display: flex;
   justify-content: space-between;
-  margin: 15px 15px;
-  font-size: 25px;
+  margin: 1.5rem 1.5rem;
+  font-size: 2.5rem;
   color: rgb(166, 229, 128);
 }
 .cart-order-details-savings-statement {
   text-align: center;
-  margin: 15px 15px;
-  font-size: 25px;
+  margin: 1.5rem 1.5rem;
+  font-size: 2.5rem;
   color: rgb(166, 229, 128);
 }
 .checkout-button {
   display: block;
-  padding: 15px 50px;
-  font-size: 20px;
+  padding: 1.5rem 5rem;
+  font-size: 2rem;
   margin: auto;
   background-image: linear-gradient(
     to right,
