--- a/src/components/UI/OrderSuccess.css
+++ b/src/components/UI/OrderSuccess.css
@@ -1,7 +1,7 @@
 .order-success {
   background-color: aqua;
   display: block;
-  margin: 100px auto;
+  margin: 10rem auto;
   background-image: linear-gradient(
     to right,
 
@@ -11,11 +11,49 @@
   color: burlywood;
 
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  padding: 20px 20px;
+  padding: 2rem 2rem;
 }
 .order-success > h2 {
-  font-size: 35px;
+  font-size: 3.5rem;
 }
 .order-success > p {
-  font-size: 25px;
+  font-size: 2.5rem;
+}
+@media (max-width: 768px) {
+  html {
+    font-size: 45.18%;
+  }
+}
+
+@media (max-width: 668px) {
+  html {
+    font-size: 39.29%;
+  }
+}
+@media (max-width: 600px) {
+  html {
+    font-size: 35.3%;
+  }
+}
+
+@media (max-width: 568px) {
+  html {
+    font-size: 33.41%;
+  }
+}
+@media (max-width: 468px) {
+  html {
+    font-size: 27.54%;
+  }
+}
+@media (max-width: 414px) {
+  html {
+    font-size: 24.35%;
+  }
+}
+
+@media (max-width: 400px) {
+  html {
+    font-size: 23.5%;
+  }
 }
