--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -1,6 +1,6 @@
 h1 {
   text-align: center;
-  margin: 10px 10px;
+  margin: 1rem 1rem;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
@@ -26,5 +26,5 @@ h1 {
   height: fit-content;
 
   width: fit-content;
-  box-shadow: 10px 10px 10px 0px burlywood;
+  box-shadow: 1rem 1rem 1rem 0rem burlywood;
 }
