--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,30 +1,36 @@
 .home-to-products-page {
-  width: 70vw;
-  height: 50vh;
+  width: 70rem;
+  height: 50rem;
   background-image: linear-gradient(
     to right,
 
     #333232 25%,
     #070707 75%
   );
-  box-shadow: 10px 10px 10px 0px burlywood;
+  box-shadow: 1rem 1rem 1rem 0rem burlywood;
   color: burlywood;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   margin: auto;
-  margin-top: 25px;
-  margin-bottom: 25px;
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
   text-align: center;
 }
 .home-to-products-page > h1 {
   text-align: center;
-  padding-top: 100px;
+  padding-top: 10rem;
+  font-size: 3rem;
+}
+.home-to-products-page > h2 {
+  text-align: center;
+
+  font-size: 2.5rem;
 }
 .home-to-products-page-link {
-  border: 1px solid white;
-  font-size: 25px;
+  border: 0.1rem solid white;
+  font-size: 2.5rem;
   text-decoration: none;
-  margin-bottom: 10px;
-  padding: 5px 20px;
+  margin-bottom: 2rem;
+  padding: 0.5rem 2rem;
   background-image: linear-gradient(
     to right,
 
@@ -34,7 +40,7 @@
   color: burlywood;
 }
 .home-to-products-page-link:hover {
-  padding: 7px 23px;
+  padding: 0.7rem 2.3rem;
   color: coral;
 }
 .category-card-section {
@@ -42,17 +48,17 @@
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 .category-card-section > h1 {
-  margin-top: 30px;
-  font-size: 35px;
+  margin-top: 3rem;
+  font-size: 3.5rem;
 }
 .category-card-section > p {
-  margin-top: 10px;
-  font-size: 25px;
+  margin-top: 1rem;
+  font-size: 2.5rem;
 }
 .category-card-flex {
   display: flex;
   justify-content: center;
-  column-gap: 40px;
-  margin-top: 20px;
-  margin-bottom: 30px;
+  column-gap: 4rem;
+  margin-top: 2rem;
+  margin-bottom: 3rem;
 }
