--- a/src/pages/LogOutPage/LogOutPage.css
+++ b/src/pages/LogOutPage/LogOutPage.css
@@ -1,6 +1,6 @@
 .logout-container {
-  width: 500px;
-  height: 300px;
+  width: 50rem;
+  height: 30rem;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -10,7 +10,7 @@
 .logout-btn {
   /* margin: 11px auto; */
 
-  font-size: 22px;
+  font-size: 2.2rem;
   background-image: linear-gradient(
     to right,
 
@@ -18,10 +18,10 @@
     #070707 75%
   );
   color: burlywood;
-  padding: 10px 10px;
+  padding: 1rem 1rem;
 }
 .logout-btn:hover {
-  padding: 10px 13px;
+  padding: 1rem 1.3rem;
 
   color: coral;
 }
