--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -1,78 +1,78 @@
 .login-card {
-  width: 425px;
-  border: 1px solid black;
-  height: 425px;
+  width: 42.5rem;
+  border: 0.1rem solid black;
+  height: 42.5rem;
   text-align: center;
-  margin: 100px auto;
+  margin: 10rem auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 25px;
+  gap: 2.5rem;
   background-image: linear-gradient(
     to right,
 
     #333232 25%,
     #070707 75%
   );
-  box-shadow: 10px 10px 10px 0px burlywood;
+  box-shadow: 1rem 1rem 1rem 0rem burlywood;
   /* align-items: center; */
   color: burlywood;
-  padding: 20px 20px;
+  padding: 2rem 2rem;
 }
 .signup-card {
-  width: 467px;
-  border: 1px solid black;
-  height: 500px;
+  width: 46.7rem;
+  border: 0.1rem solid black;
+  height: 50rem;
   text-align: center;
-  margin: 50px auto;
+  margin: 5rem auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 25px;
+  gap: 2.5rem;
   background-image: linear-gradient(
     to right,
 
     #333232 25%,
     #070707 75%
   );
-  box-shadow: 10px 10px 10px 0px burlywood;
+  box-shadow: 1rem 1rem 1rem 0rem burlywood;
   /* align-items: center; */
   color: burlywood;
-  padding: 20px 2px;
+  padding: 2rem 0.2rem;
 }
 .login-card-email-section {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 1rem;
   /* margin-bottom: 20px; */
   /* border: 1px solid black; */
 }
 .login-card-email-section > label,
 .login-card-password-section > label {
   /* align-items: center; */
-  font-size: 35px;
+  font-size: 3.5rem;
 }
 
 .login-card-email-section > input,
 .login-card-password-section > input {
   width: 70%;
   margin: auto;
-  height: 35px;
+  height: 3.5rem;
   font-size: larger;
-  padding: 5px 10px;
+  padding: 0.5rem 1rem;
 }
 .login-card-password-section {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 1rem;
 }
 .login-link {
   text-decoration: none;
-  font-size: 25px;
+  font-size: 2.5rem;
   color: burlywood;
-  border: 1px solid burlywood;
-  margin: 0px auto;
-  padding: 10px 10px;
+  border: 0.1rem solid burlywood;
+  margin: 0rem auto;
+  padding: 1rem 1rem;
   background-image: linear-gradient(
     to right,
 
@@ -82,22 +82,22 @@
 }
 .login-link:hover {
   color: coral;
-  padding: 10px 15px;
+  padding: 1rem 1.5rem;
 }
 .login-card-email-section > input::placeholder,
 .login-card-password-section > input::placeholder {
-  font-size: 20px;
-  padding: 15px 15px;
+  font-size: 2rem;
+  padding: 1.5rem 1.5rem;
 }
 .sign-up-link {
   text-decoration: none;
-  font-size: 17px;
+  font-size: 1.7rem;
   color: burlywood;
-  border: 1px solid burlywood;
-  margin: 0px auto;
-  padding: 10px 10px;
+  border: 0.1rem solid burlywood;
+  margin: 0rem auto;
+  padding: 1rem 1rem;
 }
 .sign-up-link:hover {
   color: coral;
-  padding: 10px 15px;
+  padding: 1rem 1.5rem;
 }
