--- a/src/pages/ProductPage/ProductPage.css
+++ b/src/pages/ProductPage/ProductPage.css
@@ -1,10 +1,19 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .products-and-filters {
   display: grid;
-  grid-template-columns: 18% 82%;
+  grid-template-columns: 28% 72%;
+}
+.filters-display-section {
+  max-width: 100%;
 }
 .products-display-section {
   display: flex;
-  gap: 50px;
+  gap: 5rem;
+  justify-content: space-evenly;
   flex-wrap: wrap;
-  margin-top: 20px;
+  margin-top: 2rem;
 }
