--- a/src/pages/Wishlist/Wishlist.css
+++ b/src/pages/Wishlist/Wishlist.css
@@ -11,7 +11,7 @@
   display: flex;
   /* flex-direction: column; */
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 1rem;
   justify-content: center;
   align-items: center;
 }
