--- a/src/pages/Wishlist/WishlistCard.css
+++ b/src/pages/Wishlist/WishlistCard.css
@@ -1,9 +1,9 @@
 .wishlist-card {
   width: 40vw;
-  height: 400px;
-  border: 1px solid black;
+  height: 40rem;
+  border: 0.1rem solid black;
   display: grid;
-  grid-template-columns: 1.7fr 2fr 100px;
+  grid-template-columns: 1.7fr 2fr 10rem;
   grid-template-rows: repeat(3, 1fr);
   background-image: linear-gradient(
     to right,
@@ -11,11 +11,11 @@
     #333232 25%,
     #070707 75%
   );
-  box-shadow: 10px 10px 10px 0px burlywood;
+  box-shadow: 1rem 1rem 1rem 0rem burlywood;
 }
 .wishlist-card-book-cover {
   grid-area: 1/1/4/2;
-  margin: 15px 15px;
+  margin: 1.5rem 1.5rem;
 }
 .wishlist-card-book-cover-image {
   width: 100%;
@@ -34,8 +34,8 @@
     #070707 75%
   );
   color: burlywood;
-  font-size: 20px;
-  margin: 25px 25px;
+  font-size: 2rem;
+  margin: 2.5rem 2.5rem;
 }
 .wishlist-card-add-to-cart:hover {
   color: coral;
@@ -48,8 +48,8 @@
     #070707 75%
   );
   color: burlywood;
-  font-size: 20px;
-  margin: 10px 10px;
+  font-size: 2rem;
+  margin: 1rem 1rem;
 }
 .wishlist-card-remove-from-cart:hover {
   color: coral;
@@ -59,22 +59,22 @@
   align-self: center;
 }
 .wishlist-card-book-basic-details > .wishlist-card-book-title {
-  font-size: 35px;
+  font-size: 3.5rem;
 }
 .wishlist-card-book-basic-details > .wishlist-card-book-author {
-  font-size: 25px;
+  font-size: 2.5rem;
 }
 .wishlist-card-book-price {
-  font-size: 35px;
+  font-size: 3.5rem;
   color: burlywood;
   align-self: center;
 }
 .wishlist-card-book-price > s {
-  font-size: 25px;
+  font-size: 2.5rem;
   color: grey;
 }
 .wishlist-card-book-price > span {
-  font-size: 25px;
+  font-size: 2.5rem;
   font-weight: bold;
   color: green;
 }
